<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarseActivity">


    <LinearLayout
        android:id="@+id/registrarse"
        android:layout_width="296dp"
        android:layout_height="541dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/app_correo"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/app_contrasena"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/contrasenaConfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/app_contrasenaConfirmar"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/registrar_pantalla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="RegistrarUsuario"
            android:gravity="center"
            android:text="@string/app_registrarse"
            android:textAlignment="gravity"
            tools:ignore="RtlCompat" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>